--- a/server-app/.env
+++ b/server-app/.env
@@ -1,2 +1,2 @@
 PORT=8080
-DATABASE_URL="mongodb://mongo:secreypassword@localhost/pals"
+DATABASE_URL=mongodb://mongo:secreypassword@localhost:27017/pals
