--- a/server-app/package.json
+++ b/server-app/package.json
@@ -17,9 +17,11 @@
     "exec": "ts-node src/index.ts"
   },
   "scripts": {
-    "build": "cp ../.env .env && npx tsc",
-    "start": "cp ../.env .env && nodemon",
-    "serve": "node dist/index.js"
+    "build": "npx tsc",
+    "start": "nodemon",
+    "serve": "node dist/index.js",
+    "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -29,15 +31,20 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "eslint": "9.x",
+    "globals": "^15.3.0",
     "nodemon": "^3.1.1",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0"
   }
 }
