add auth service and jwt

--- a/server-app/.env.production
+++ b/server-app/.env.production
@@ -1,2 +1,5 @@
 PORT=8080
 DATABASE_URL=mongodb://mongo:secreypassword@mongo:27017/pals
+
+ACCESS_TOKEN_SECRET=notasecrey
+REFRESH_TOKEN_SECRET=notasecrey
