--- a/server-app/package.json
+++ b/server-app/package.json
@@ -37,7 +37,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "eslint": "9.x",
     "globals": "^15.3.0",
