--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: mongodb
     image: mongo
     ports:
-      - "27017:27017"
+      - "9010:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ADMIN_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PWD}
@@ -25,7 +25,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - 9011:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ADMIN_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PWD}
@@ -39,7 +39,7 @@ services:
     image: pals-web-app
     env_file: .env
     ports:
-      - "3000:3000"
+      - "${UI_PORT:-3000}:3000"
     # volumes:
     #   - web-app-build:/app
   server-app:
@@ -50,4 +50,4 @@ services:
     image: pals-server-app
     env_file: .env
     ports:
-      - "8080:8080"
+      - "${SERVER_PORT:-8080}:8080"
