--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
     "classnames": "^2.5.1",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.4",
+    "jsonwebtoken": "^9.0.2",
     "ky": "^1.2.4",
     "next": "14.2.3",
     "react": "^18",
@@ -27,6 +29,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
