--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.4.2",
     "classnames": "^2.5.1",
     "cookies-next": "^4.2.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.2.4",
     "jsonwebtoken": "^9.0.2",
     "ky": "^1.2.4",
@@ -29,6 +30,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
