--- a/server-app/package.json
+++ b/server-app/package.json
@@ -24,12 +24,10 @@
     "lint:fix": "eslint ./ --fix"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express-validator": "^3.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": ">=5.0.0-beta.1",
     "express-validator": "^7.1.0",
     "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
@@ -38,7 +36,9 @@
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "eslint": "9.x",
