--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,7 +16,6 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
     "classnames": "^2.5.1",
-    "cookies-next": "^4.2.1",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.2.4",
     "jsonwebtoken": "^9.0.2",
@@ -27,7 +26,8 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
