--- a/web-app/package.json
+++ b/web-app/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
+    "chakra-react-select": "^4.7.6",
     "classnames": "^2.5.1",
     "framer-motion": "^11.2.4",
     "jsonwebtoken": "^9.0.2",
