--- a/server-app/package.json
+++ b/server-app/package.json
@@ -29,9 +29,10 @@
     "dotenv": "^16.4.5",
     "express": ">=5.0.0-beta.1",
     "express-validator": "^7.1.0",
-    "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
@@ -41,8 +42,9 @@
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "eslint": "9.x",
-    "globals": "^15.3.0",
     "nodemon": "^3.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
