--- a/server-app/package.json
+++ b/server-app/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": ">=5.0.0-beta.1",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
