--- a/web-app/package.json
+++ b/web-app/package.json
@@ -17,9 +17,9 @@
     "@hookform/resolvers": "^3.4.2",
     "chakra-react-select": "^4.7.6",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.4",
     "jsonwebtoken": "^9.0.2",
-    "ky": "^1.2.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
